Add styles for avatar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <script src="http://underscorejs.org/underscore-min.js" type="text/javascript" charset="utf-8"></script>
   <script src="http://backbonejs.org/backbone-min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/github.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 <body>
 <h1>jarviis/jarviis commits</h1>
 <div id="list">
-  
+
 </div>
 </body>
 </html>
